:art: fix various headers, spacing

--- a/sass/_band.scss
+++ b/sass/_band.scss
@@ -9,20 +9,26 @@
   padding-bottom: $section-padding / 2;
   padding-top: $section-padding / 2;
 
+  &--head {
+    padding-bottom: 1.5 * $inner-padding;
+  }
+
   &--header {
     $header-size: 3rem;
     @include header($header-size);
+    padding-bottom: 0;
     text-align: center;
 
     &--dark {
       @include header($header-size, $text-color-light);
+      padding-bottom: 0;
       text-align: center;
     }
   }
 
   &--sub-header {
     @include header(1.5rem, $text-color-blue);
-    padding-bottom: $inner-padding;
+    padding: $inner-padding 0 0;
     text-align: center;
   }
 
@@ -32,7 +38,7 @@
     float: none;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: $inner-padding;
+    padding-top: $inner-padding;
   }
 
   &--body {
