--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -13,8 +13,7 @@ $button-inverse-color: #fff;
   padding: .8rem 1.5rem;
   text-align: center;
   text-decoration: none;
-  transition: color $transition-duration-short ease-in-out,
-    background-color $transition-duration-short ease-in-out;
+  transition: color $transition-duration-short ease-in-out, background-color $transition-duration-short ease-in-out;
 }
 
 .button {
