--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,8 +101,7 @@ main {
       left: 0;
       position: absolute;
       transform: scaleX(0);
-      transition: transform $transition-duration-short ease-in-out,
-        visibility $transition-duration-short ease-in-out;
+      transition: transform $transition-duration-short ease-in-out, visibility $transition-duration-short ease-in-out;
       visibility: hidden;
       width: 100%;
     }
@@ -130,6 +129,7 @@ main {
 
   &--header {
     @include header(1.5rem, $text-color-blue);
+    text-align: right;
   }
 
   &:not(:last-child) {
@@ -160,7 +160,7 @@ main {
 .registry {
   @extend %grid-two-icon-centered;
   display: block;
-  text-align: Center;
+  text-align: center;
   transition: opacity $transition-duration-short ease-in-out;
 
   &:hover {
@@ -173,5 +173,5 @@ main {
 }
 
 .details-header {
-  padding-bottom: .5 * $inner-padding;
+  padding: 0 0 .5 * $inner-padding;
 }
